fix(wsp): Le contraste de l'ajout d'un utilisateur n'était pas top

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -6616,3 +6616,7 @@ html@{touch} {
     --wsp-nav-me-display: none;
   }
 }
+
+#tmp-id-wsp {
+  color: var(--input-text-color);
+}
